--- a/design/templates/OpenGame/topnav.tpl.html
+++ b/design/templates/OpenGame/topnav.tpl.html
@@ -168,6 +168,10 @@
 
         </td>
         <!-- EOF Nav Bar Right block -->
+        <td>
+          <button id="font_plus">font +</button><br />
+          <button id="font_minus">font -</button>
+        </td>
       </tr></table>
     </td>
   </tr>
