INT-misc-40a1.13: Added 'normal' font button

--- a/design/templates/OpenGame/topnav.tpl.html
+++ b/design/templates/OpenGame/topnav.tpl.html
@@ -170,6 +170,7 @@
         <!-- EOF Nav Bar Right block -->
         <td>
           <button id="font_plus">font +</button><br />
+          <button id="font_normal">normal</button><br />
           <button id="font_minus">font -</button>
         </td>
       </tr></table>
