--- a/design/templates/OpenGame/topnav.tpl.html
+++ b/design/templates/OpenGame/topnav.tpl.html
@@ -41,13 +41,13 @@
     <td class="c_l noborder">
       <table cellspacing="0" cellpadding="0" class="header c_c noborder" width="100%">
         <tr>
-          <th class="c_c">
-            {L_time_local}: <span id="top_time">{TIME_TEXT_LOCAL}</span><br />
+          <th class="c_c" width="100%">
+            <span class="ok">{L_time_local}: <span id="top_time">{TIME_TEXT_LOCAL}</span></span><br />
             {L_time_server}: <span id="top_time_server">{TIME_TEXT}</span>
           </th>
         <!--</tr>-->
         <!--<tr>-->
-          <th class="c_c">
+          <th class="c_r" nowrap>
             <button id="font_plus">Шрифт +</button>
             <button id="font_normal">Норма</button>
             <button id="font_minus">Шрифт -</button>
